Retired/Mailrise/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailrise
  labels:
    app.kubernetes.io/component: 'application'  # The component within the architecture
  annotations:
    # reloader.stakater.com/auto: 'true'  # Reloads workload when any referenced ConfigMap or Secret changes
    reloader.stakater.com/search: 'true'  # Enables search mode (only reloads if matching secrets/configMaps are found)
    # configmap.reloader.stakater.com/auto: 'true'  # Reloads only when referenced ConfigMap(s) change
    # configmap.reloader.stakater.com/reload: ''  # Reloads when specific ConfigMap(s) change, regardless of how they're used
    # secret.reloader.stakater.com/auto: 'true'  # Reloads only when referenced Secret(s) change
    # secret.reloader.stakater.com/reload: ''  # Reloads when specific Secret(s) change, regardless of how they're used
    reloader.stakater.com/rollout-strategy: 'rollout'  # Specifies the rollout strategy for the workload (rollout (default) / restart)
spec:
  revisionHistoryLimit: 3
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'  # The component within the architecture
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 999
      containers:
        - name: mailrise
          image: ghcr.io/yoryan/mailrise:0.0.0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 999
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: 64Mi
              cpu: 0.01
            limits:
              memory: 128Mi
              cpu: 0.1
          ports:
            - containerPort: 465
              protocol: TCP
              name: mailsecure
          startupProbe:
            tcpSocket:
              port: mailsecure
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: mailsecure
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: mailsecure
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: mailrise-config-vol
              mountPath: /etc/mailrise.conf
              subPath: mailrise.conf
              readOnly: true
            - name: mailrise-certificate-vol
              mountPath: /etc/mailrise/cert
              readOnly: true
      volumes:
        - name: mailrise-config-vol
          configMap:
            name: mailrise-config
        - name: mailrise-certificate-vol
          secret:
            secretName: mailrise-certificate
