Retired/Mailrise/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailrise
  labels:
    app.kubernetes.io/component: 'application'  # The component within the architecture
spec:
  loadBalancerIP: '0.0.0.0'
  selector:
    app.kubernetes.io/component: 'application'  # The component within the architecture
  ports:
    - protocol: TCP
      port: 465
      targetPort: 465
      name: mailsecure
  type: LoadBalancer
